syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "CarServiceProto";

message CarResponse {
  int64 id = 1;
  string brand = 2;
  string model = 3;
}

service CarService {
  rpc getRandomCar(google.protobuf.Empty) returns (CarResponse);
  rpc serverSideStreamingGetRandomCar(google.protobuf.Empty) returns (stream CarResponse);
  rpc bidirectionalStreamingGetRandomCar(stream google.protobuf.Empty) returns (stream CarResponse);
}
